Support standard OpenAPI request features
